# awp

./: .golangci.yml  AGENTS.md  README.md  go.mod  go.sum  mise.toml
.claude/: settings.local.json
.github/: pull_request_template.md
cmd/awp/: main.go
internal/agenthooks/: install.go  install_test.go
internal/charm/: palette.go  progress.go  prompt.go  term.go  theme.go
internal/cli/: agent_env.go  app.go  app_test.go  config_cmd.go  deck.go  deck_cleanup.go  deck_cleanup_test.go  deck_devloop_test.go  deck_open.go  deck_open_test.go  deck_prefs.go  deck_review_base_test.go  deck_state_watcher.go  deck_test.go  exec.go  gate.go  gate_test.go  init_hooks.go  loop.go  loop_test.go  mini_deck.go  mini_deck_test.go  new_flow.go  open_form.go  open_form_test.go  open_form_wrap_test.go  picker.go  picker_test.go  pr_status_cache.go  pr_status_cache_test.go  pr_status_job.go  pr_status_job_test.go  pr_status_projection.go  pr_status_projection_test.go  report_status.go  report_status_test.go  require_task.go  require_task_test.go  review.go  review_prompt.md  (+10 more)
internal/config/: config.go  config_test.go  hooks.go  hooks_test.go
internal/deckdata/: deckdata_test.go  stacks.go  types.go  view.go
internal/deckui/: activity.go  activity_test.go  browser.go  deps.go  devloop_meta_test.go  doc.go  jobs.go  jobs_test.go  keymap.go  mini.go  mini_test.go  modal.go  modal_bookmark.go  modal_bookmark_test.go  modal_confirm.go  modal_help.go  modal_input.go  modal_jobs.go  modal_open.go  modal_open_test.go  modal_prmenu.go  modal_review.go  modal_watch.go  model.go  model_test.go  new_workspace_form.go  optimistic_test.go  palette.go  pin_groups_test.go  prompt_form.go  rename_workspace_form.go  setting_up_test.go  start_from_field.go  styles.go  workspace_form_program.go
internal/diff/: parser.go  parser_test.go
internal/doctor/: service.go  service_test.go
internal/editor/: editor.go  editor_test.go
internal/forge/: forge.go  forge_test.go  github.go  gitlab.go
internal/github/: github.go  github_test.go
internal/jj/: jj.go  jj_test.go
internal/jobs/: heartbeat.go  orphan.go  orphan_darwin.go  orphan_linux.go  orphan_other.go  orphan_test.go  spawn.go  spawn_unix.go  spawn_windows.go  store.go  store_test.go  types.go
internal/prstatus/: prstatus.go
rust/: Cargo.toml  README.md  deny.toml
rust/.github/workflows/: ci.yml
rust/crates/awp-agent/: Cargo.toml
rust/crates/awp-agent/src/: hooks.rs  lib.rs  pr.rs  repo.rs  report_status.rs  subprocess.rs  workspace.rs
rust/crates/awp-core/: Cargo.toml
rust/crates/awp-core/src/: effect.rs  event.rs  lib.rs  model.rs  reduce.rs  reduce_tests.rs  state.rs  status.rs
rust/crates/awp-session/: Cargo.toml
rust/crates/awp-session/src/: lib.rs  local.rs  tmux.rs  types.rs
rust/crates/awp-store/: Cargo.toml
rust/crates/awp-store/src/: error.rs  lib.rs  migrate.rs  tests.rs
rust/crates/awp-tui/: Cargo.toml
rust/crates/awp-tui/src/: app.rs  main.rs  pane.rs  theme.rs
rust/crates/awp-tui/tests/: e2e.rs
rust/crates/awp-vt/: Cargo.toml
rust/crates/awp-vt/src/: lib.rs  libghostty_engine.rs  screen.rs
scripts/: new-spec
specs/: 20260409-7k2m-workspace-management-spec.md  20260409-a9q3-post-workspace-start-hooks-spec.md  20260409-g6r4-doctor-command-spec.md  20260410-1l07-diff-ui-spec.md  20260410-k3m8-open-prompt-interactive-spec.md  20260410-mstc-ui-polish-and-charm-migration-spec.md  20260413-r90x-tmux-dashboard-architecture-spec.md  20260414-rs21-review-command-spec.md  20260415-i3a3-ci-run-watch-deck-action-spec.md  20260415-sr58-deck-find-easymotion-navigation-spec.md  20260429-i021-agent-status-reporting-spec.md  20260502-or72-async-progress-jobs-spec.md  20260504-id6a-right-panel-redesign-and-background-jobs-spec.md  20260505-ucc0-deck-inline-new-workspace-form-spec.md  20260512-19kf-deck-pr-status-glyph-spec.md  20260513-azuv-deck-rename-workspace-spec.md  20260513-lbkj-deck-global-activity-bar-spec.md  20260514-ih0x-deck-dev-server-url-capture-spec.md  20260522-f1g7-forge-gitlab-cli-spec.md  20260522-gaq9-deckui-charm-cleanup-spec.md  20260522-h6tw-default-new-workspace-to-main-bookmark-spec.md  20260527-s1hm-pr-association-refactor-spec.md  20260605-fal9-pr-inbox-scope-spec.md  20260702-fhhg-deck-pin-groups-spec.md  20260709-vn9m-rust-rewrite-ratatui-libghostty-zmx-spec.md  20260710-l13c-deck-read-model-and-store-seam-spec.md  20260713-9p1y-stale-re-review-comment-migration-spec.md  20260713-w4tc-agent-dev-loop-watch-spec.md  20260714-064t-repair-driven-tuicr-review-window-reload-spec.md  20260714-q4rt-dev-loop-enforcement-spec.md  20260714-v8pb-hook-authoritative-dev-loop-status-cache-spec.md  backlog.md  spec-template.md
(+27 files in other folders)
