[package]
name = "awp-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Orchestration: jj/gh subprocesses, Claude hook install/self-heal, report-status."

[dependencies]
awp-core = { workspace = true }
awp-store = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
