[package]
name = "awp-session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "SessionBackend trait: portable-pty local sessions + a headless, persistent tmux backend."

[dependencies]
awp-core = { workspace = true }
thiserror = { workspace = true }
portable-pty = { workspace = true }

[lints]
workspace = true
