[package]
name = "awp-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "SQLite (WAL) persistence for awp + non-destructive JSON migration."

[dependencies]
awp-core = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
